# sweng_for_deng

./: .gitpod.yml  .pre-commit-config.yaml  README.md  dev-requirements.txt  foo.txt  pyproject.toml  pyvenv.cfg  requirements.txt  setup.py
.github/workflows/: build.yaml  demo.yaml  flow1.yaml  gitworkflow.yaml  workflow.yaml  workflow1.yaml
example/: pyvenv.cfg
example/training_repo/: LICENSE  Makefile  README.md  setup.py
example/training_repo/docs/: Makefile  conf.py  index.rst  make.bat
example/training_software_engineering/: LICENSE  Makefile  README.md  setup.py
example/training_software_engineering/docs/: Makefile  conf.py  index.rst  make.bat
exercises/a_cleaning/: clean_flights.py  clean_flights_starter.py
exercises/b_unit_test_demo/: distance_metrics.py  distance_metrics_corrected.py
exercises/c_labellers/: dates.py  dates_solution.py
exercises/userquestions/: mixin_with_logging.py
repo/: LICENSE  README.md  setup.py
repo/docs/: conf.py
tests/: __init__.py  comparers.py  conftest.py  test_clean_flights.py  test_comparers.py  test_distance_metrics.py  test_distance_metrics_solution.py  test_labellers.py  test_labellers_solution.py
