[tool.poetry]
authors = [
    "Oliver Willekens <oliver.willekens@dataminded.be",
    ]
description = "Exercises for the Software Engineering workshop"
name = "SWEng for DEng"
version = "0.1.0"

[tool.black]
line-length = 79
target-version = ['py38']
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
include_trailing_comma = true
line_length = 79
multi_line_output = 3
use_parentheses = true

[build-system]
# Should be the same as `$POETRY_VERSION`:
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
